# hattrie

./: .gitignore  API_REFERENCE.md  Cargo.toml  README.USAGE.md  README.md
benches/: trie.rs
docs/: PERFORMANCE.md
src/: bucket.rs  fuzzy.rs  leaf.rs  lib.rs  node.rs
tests/: advanced.proptest-regressions  advanced.rs  comprehensive.proptest-regressions  comprehensive.rs  iter.rs  mutation.rs  serde.rs  streaming_iter.rs  stress.rs  traits.rs
