[package]
name = "hat-trie"
version = "0.9.0"
edition = "2024"
license = "MPL-2.0"
authors = ["Norm O <normo.pub@gmail.com>"]

description = "A high-performance, cache-conscious, ordered map for string keys, based on the HAT-trie paper."
repository = "https://github.com/normano/hat-trie"
readme = "README.md"
keywords = ["trie", "map", "cache-conscious", "sorted", "string"]
categories = ["data-structures", "caching", "text-processing"]

[features]
default = []
# The feature flag that exposes Serde support
serde = ["dep:serde"]

[dependencies]
ahash = "0.8"
serde = { version = "1.0", features = ["derive", "rc"], optional = true }

[dev-dependencies]
bench_matrix = "0.2"
criterion = "0.8"
proptest = "1.9.0"
rand = "0.9"
rand_pcg = "0.9.0"
serde_json = "1.0"


[[bench]]
name = "trie"
harness = false